--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,18 +13,52 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.1.min.js"></script>
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     </head>
-    <body>
+    <body class="container">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
 
+        <section class="top-content">
+          <div class="logo">
+            <a href="/">
+              <img src="img/logo-teddy.png" alt="dandelion wishes logo">
+            </a>
+          </div>
+          <div class="logo-title">
+            <img src="img/title.png" alt="childrens clothing and toys resale">
+          </div>
+          <div class="main">
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Buy</a></li>
+              <li><a href="#">Sell</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="boxes" id="boxes">
+          <a href="#">
+            <div class="shop-box box">
+              <p>Shoppers</p>
+            </div>
+          </a>
+          <a href="#">
+            <div class="sell-box box">
+              <p>Sellers</p>
+            </div>
+          </a>
+        </section>
+
         <%= yield %>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
