--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,8 @@
 ---
-title: HTML5 Boilerplate Middleman
+title: Home
 ---
 
-<div class="content">
   Greetings, from Dandelion Wishes!
-</div>
 
 
 
