--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -36,27 +36,30 @@
           <div class="main">
             <ul>
               <li><a href="#">About</a></li>
-              <li><a href="#">Buy</a></li>
-              <li><a href="#">Sell</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">FAQ</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
-        </section>
-
-        <section class="boxes" id="boxes">
-          <a href="#">
-            <div class="shop-box box">
+          <div class="shop-box box">
+            <a href="shoppers.html">
               <p>Shoppers</p>
-            </div>
-          </a>
-          <a href="#">
-            <div class="sell-box box">
+            </a>
+          </div>
+          <div class="sell-box box">
+            <a href="sellers.html" target="_blank">
               <p>Sellers</p>
-            </div>
-          </a>
+            </a>
+          </div>
         </section>
 
-        <%= yield %>
+
+
+        <div class="content">
+
+          <%= yield %>
+
+        </div>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
