--- a/source/shoppers.html.erb
+++ b/source/shoppers.html.erb
@@ -3,4 +3,27 @@ title: Shoppers
 ---
 
 
-<h1>Next Dandelion Wishes Event</h1>
+<section class="shoppers-content">
+  <h1>Shop at Dandelion Wishes!</h1>
+  <h3>Spring Sale Dates: March 7-9</h2>
+  <h2>SHOPPING TIMES</h3>
+  <div class="shop-times well">
+    <p>Friday Pre-Sale</p>
+    <p>10:00 AM - 6:00 PM</p>
+    <p>Invitation Only (See below)</p>
+  </div>
+  <div class="shop-times well">
+    <p>Saturday</p>
+    <p>10:00 AM - 6:00 PM</p>
+  </div>
+  <div class="shop-times well">
+    <p>Sunday (HALF PRICE)</p>
+    <p>10:00 AM - 6:00 PM</p>
+  </div>
+</section>
+
+<section class="shop-lower-content">
+  <p><span style="text-decoration:underline;">Friday pre-sale</span>: If you are a Consignor, you will receive your invitation during your drop-off appointment. If you are an expecting mom, or have had a baby within the last 12 months, you can register <a href="#">HERE</a> for an invitation to the Friday night pre-sale.</p>
+  <p>NOTE: Children are, of course, welcome at the sale, but we ask that you keep a watchful eye that they don’t break anything, or separate things that are taped together, etc. All of the merchandise belongs to about 70 other moms who are trying to pass their items on to someone else who can use it. Please help us in our efforts to watch over these items until they make it to a new home. Thank you so much!</p>
+</section>
+
