--- a/source/shoppers.html.erb
+++ b/source/shoppers.html.erb
@@ -17,8 +17,8 @@ title: Shoppers
     <p>10:00 AM - 6:00 PM</p>
   </div>
   <div class="shop-times well">
-    <p>Sunday (HALF PRICE)</p>
-    <p>10:00 AM - 6:00 PM</p>
+    <p>Sunday (HALF PRICE DAY)</p>
+    <p>10:00 AM - 2:00 PM</p>
   </div>
 </section>
 
