minor css changes to shoppers and sellers pages

--- a/source/shoppers.html.erb
+++ b/source/shoppers.html.erb
@@ -5,20 +5,27 @@ title: Shoppers
 
 <section class="shoppers-content">
   <h1>Shop at Dandelion Wishes!</h1>
-  <h3>Spring Sale Dates: March 7-9</h2>
-  <h2>SHOPPING TIMES</h3>
-  <div class="shop-times well">
-    <p>Friday Pre-Sale</p>
-    <p>6:00 PM - 9:00 PM</p>
-    <p>Invitation Only (See below)</p>
-  </div>
-  <div class="shop-times well">
-    <p>Saturday</p>
-    <p>10:00 AM - 6:00 PM</p>
-  </div>
-  <div class="shop-times well">
-    <p>Sunday (HALF PRICE DAY)</p>
-    <p>10:00 AM - 2:00 PM</p>
+    <div class="sale-location well">
+      <h3>Spring Sale: March 7-9</h3>
+      <p>Morgan Hill Community & Cultural Center</p>
+      <p>17000 Monterey St</p>
+      <p>Morgan Hill, CA  95037</p>
+    </div>
+  <div class="shop-times-wrapper">
+    <h3>SHOPPING TIMES</h3>
+    <div class="shop-times well">
+      <p>Friday Pre-Sale</p>
+      <p>6:00 PM - 9:00 PM</p>
+      <p>Invitation Only (See below)</p>
+    </div>
+    <div class="shop-times well">
+      <p>Saturday</p>
+      <p>10:00 AM - 6:00 PM</p>
+    </div>
+    <div class="shop-times well">
+      <p>Sunday (HALF PRICE DAY)</p>
+      <p>10:00 AM - 2:00 PM</p>
+    </div>
   </div>
 </section>
 
