--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,9 @@
 title: Home
 ---
 
-  Greetings, from Dandelion Wishes!
+<div class="home-content">
+  <h1>Greetings, from Dandelion Wishes!</h1>
+</div>
 
 
 
