--- a/source/sellers.html.erb
+++ b/source/sellers.html.erb
@@ -12,13 +12,13 @@ title: Sellers
   </ol>
   <p>We do the advertising, set up the location for the sale, and sell your items! You will receive 60-70% of the sale proceeds. At the conclusion of the sale, you can choose to pick up any unsold items or donate them. Then, on the Tuesday following the sale, you will receive your proceeds from the sale via Paypal. It's as simple as that!</p>
   <p>Here's a bit more detail:</p>
-  <h3><a href="http://www.mysalemanager.net/reg_start.aspx?partnercode=DAND&type=new" target="_blank">Register</a></h3>
+  <h3>Register</h3>
   <p>There is a $10 registration fee the first time you <a href="http://www.mysalemanager.net/reg_start.aspx?partnercode=DAND&type=new" target="_blank">register</a>. This fee is waived if you consigned at our most recent sale. To have the fee waived, please <a href="mailto:mattjenraz@gmail.com?subject=Waive+Fee">EMAIL US</a> and include your name and consignor number.</p>
   <h3>Choose your earning percentage</h3>
   <p>Consignors typically receive 60% of their sale proceeds. But if you’d like to earn a little more, <a href="http://www.mysalemanager.net/wrk_start.aspx?partnercode=DAND" target="_blank">VOLUNTEER</a> to work a 4-hour shift and the percentage is increased to 70%!</p>
   <h3>Prepare your items</h3>
-  <p>Go through your kid's closets, toy boxes, and bookshelves, and gather your items to sell. We have <a href="#">INSTRUCTIONS</a> on how to tag your clothing, and how to prepare your toys. You determine the price of your items, but a pricing guideline can be found <a href="#">HERE</a>.</p>
-  <h3><a href="http://www.mysalemanager.net/drp_start.aspx?partnercode=DAND" target="_blank">Drop off your items</a></h3>
+  <p>Go through your kid's closets, toy boxes, and bookshelves, and gather your items to sell. We have <a href="#">INSTRUCTIONS</a> on how to tag your clothing, and how to prepare your toys. You determine the price of your items, but a pricing guideline can be found <a href="pricing_guidelines.pdf" target="_blank">HERE</a>.</p>
+  <h3>Drop off your items</h3>
   <p>Please sign up for a <a href="http://www.mysalemanager.net/drp_start.aspx?partnercode=DAND" target="_blank">DROP OFF</a> time. When you arrive, we will have someone look through your items (as a second set of eyes), and then together you will put your items out on the designated tables, racks, and shelves.</p>
   <h3>Bonus!!!</h3>
   <p>As a consignor, you have the privilege of shopping before the public! At your drop-off appointment, you will receive your invitation to the Friday night Pre-Sale. It will allow entrance for you and one guest.</p>
