--- a/source/shoppers.html.erb
+++ b/source/shoppers.html.erb
@@ -10,6 +10,7 @@ title: Shoppers
       <p>Morgan Hill Community & Cultural Center</p>
       <p>17000 Monterey St</p>
       <p>Morgan Hill, CA  95037</p>
+      <a href="https://www.google.com/maps/preview/place/Morgan+Hill+Community+%26+Cultural+Center/@37.1260908,-121.6498431,17z/data=!3m1!4b1!4m2!3m1!1s0x808e208b46a7e2e7:0xd55acbb6345d07e0" target="_blank">map</a>
     </div>
   <div class="shop-times-wrapper">
     <h3>SHOPPING TIMES</h3>
