--- a/source/shoppers.html.erb
+++ b/source/shoppers.html.erb
@@ -4,7 +4,7 @@ title: Shoppers
 
 
 <section class="shoppers-content">
-  <h1>Shop at Dandelion Wishes!</h1>
+  <!-- <h1>Shop at Dandelion Wishes!</h1> -->
     <div class="sale-location well">
       <h3>Spring Sale: March 7-9</h3>
       <p>Morgan Hill Community & Cultural Center</p>
