--- a/source/sellers.html.erb
+++ b/source/sellers.html.erb
@@ -4,7 +4,7 @@ title: Sellers
 
 <section class="sellers-content">
   <h1>Sell at Dandelion Wishes!</h1>
-  <p>This is a great, easy way to earn more for your children’s fabulous items they’ve outgrown or no longer use! It’s easy!!</p>
+  <p>This is a great, easy way to earn more for your children&#8217;s fabulous items they&#8217;ve outgrown or no longer use! It&#8217;s easy!!</p>
   <ol>
     <li><a href="http://www.mysalemanager.net/reg_start.aspx?partnercode=DAND&type=new" target="_blank">Register</a></li>
     <li>Enter and tag your items online</li>
@@ -15,7 +15,7 @@ title: Sellers
   <h3>Register</h3>
   <p>There is a $10 registration fee the first time you <a href="http://www.mysalemanager.net/reg_start.aspx?partnercode=DAND&type=new" target="_blank">register</a>.</p>
   <h3>Choose your earning percentage</h3>
-  <p>Consignors typically receive 60% of their sale proceeds. But if you’d like to earn a little more, <a href="http://www.mysalemanager.net/wrk_start.aspx?partnercode=DAND" target="_blank">VOLUNTEER</a> to work a 4-hour shift and the percentage is increased to 70%!</p>
+  <p>Consignors typically receive 60% of their sale proceeds. But if you&#8217;d like to earn a little more, <a href="http://www.mysalemanager.net/wrk_start.aspx?partnercode=DAND" target="_blank">VOLUNTEER</a> to work a 4-hour shift and the percentage is increased to 70%!</p>
   <h3>Prepare your items</h3>
   <p>Go through your kid's closets, toy boxes, and bookshelves, and gather your items to sell. We have <a href="instructions.pdf" target="_blank">INSTRUCTIONS</a> on how to tag your clothing, and how to prepare your toys. You determine the price of your items, but a pricing guideline can be found <a href="pricing_guidelines.pdf" target="_blank">HERE</a>.</p>
   <h3>Drop off your items</h3>
