corrected the order of modernizr and bootstrap; made adjustmets accordingly

--- a/source/returns.html.erb
+++ b/source/returns.html.erb
@@ -9,7 +9,7 @@ title: Return Consignors
 
   <p>So let&#8217;s get to it!</p>
 
-  <p>First, send an <a href="mailto:mattjenraz@gmail.com?subject=Waive+Fee">EMAIL</a>, with your name and consignor number, and we will get you registered for the Spring Sale. (Going this route will waive the $10 registration fee.)</p>
+  <p>First, send an <a href="mailto:mattjenraz@gmail.com?subject=Dandelion+Wishes">EMAIL</a>, with your name and consignor number, and we will get you registered for the Spring Sale. (Going this route will waive the $10 registration fee.)</p>
 
   <p>Then you can sign up to <a href="http://www.mysalemanager.net/wrk_start.aspx?partnercode=DAND" target="_blank">VOLUNTEER</a> if you&#8217;d like, select a <a href="http://www.mysalemanager.net/drp_start.aspx?partnercode=DAND" target="_blank">DROP-OFF</a> time, and start <a href='http://www.mysalemanager.net/itm_start.aspx?partnercode=DAND' target='_blank'>ENTERING AND PRINTING</a> tags!</p>
 
