--- a/source/shoppers.html.erb
+++ b/source/shoppers.html.erb
@@ -32,6 +32,6 @@ title: Shoppers
 
 <section class="shop-lower-content">
   <p><span style="text-decoration:underline;">Friday pre-sale</span>: If you are a Consignor, you will receive your invitation during your drop-off appointment. If you are an expecting mom, or have had a baby within the last 12 months, you can register <a href="http://www.mysalemanager.net/mom_start.aspx?partnercode=DAND" target="_blank">HERE</a> for an invitation to the Friday night pre-sale.</p>
-  <p>NOTE: Children are, of course, welcome at the sale, but we ask that you keep a watchful eye that they don’t break anything, or separate things that are taped together, etc. All of the merchandise belongs to about 70 other moms who are trying to pass their items on to someone else who can use it. Please help us in our efforts to watch over these items until they make it to a new home. Thank you so much!</p>
+  <p>NOTE: Children are, of course, welcome at the sale, but we ask that you keep a watchful eye that they don&#8217;t break anything, or separate things that are taped together, etc. All of the merchandise belongs to about 70 other moms who are trying to pass their items on to someone else who can use it. Please help us in our efforts to watch over these items until they make it to a new home. Thank you so much!</p>
 </section>
 
