--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,3 +1,10 @@
 ---
 title: Contact
 ---
+
+<div class="contact-content">
+  <h1>Contact Dandelion Wishes</h1>
+  <p>Jennifer Rasmussen</p>
+  <p><a href="mailto:mattjenraz@gmail.com?subject=Dandelion+Wishes" target="_blank">mattjenraz@gmail.com</a></p>
+  <p>408-569-5652</p>
+</div>
