added paypal line

--- a/source/sellers.html.erb
+++ b/source/sellers.html.erb
@@ -13,7 +13,7 @@ title: Sellers
   <p>We do the advertising, set up the location for the sale, and sell your items! You will receive 60-70% of the sale proceeds. At the conclusion of the sale, you can choose to pick up any unsold items or donate them. Then, on the Tuesday following the sale, you will receive your proceeds from the sale via Paypal. It's as simple as that!</p>
   <p>Here's a bit more detail:</p>
   <h3>Register</h3>
-  <p>There is a $10 registration fee the first time you <a href="http://www.mysalemanager.net/reg_start.aspx?partnercode=DAND&type=new" target="_blank">register</a>.</p>
+  <p>There is a $10 registration at the time you <a href="http://www.mysalemanager.net/reg_start.aspx?partnercode=DAND&type=new" target="_blank">register</a>.</p>
   <h3>Choose your earning percentage</h3>
   <p>Consignors typically receive 60% of their sale proceeds. But if you&#8217;d like to earn a little more, <a href="http://www.mysalemanager.net/wrk_start.aspx?partnercode=DAND" target="_blank">VOLUNTEER</a> to work a 4-hour shift and the percentage is increased to 70%!</p>
   <h3>Prepare your items</h3>
