Added fall dates

--- a/source/sellers.html.erb
+++ b/source/sellers.html.erb
@@ -23,7 +23,7 @@ title: Sellers
   <h3>Bonus!!!</h3>
   <p>As a consignor, you have the privilege of shopping before the public! At your drop-off appointment, you will receive your invitation to the Friday night Pre-Sale. It will allow entrance for you and one guest.</p>
   <h3>Pick up or donate your unsold items</h3>
-  <p>You may choose to donate or pick up your unsold items. <span style="text-decoration:underline;">All items must be picked up between 6:00 - 10:00 PM on Sunday, March 9th.</span> Or you may choose to donate your items. We donate them to a local charity that distributes the items without charge to their recipients. <em>Any items not picked up by 10:00 PM on Sunday, March 9th, will be donated. Unfortunately, <span style="text-decoration:underline">no exceptions</span> can be made to this rule.</em></p>
+  <p>You may choose to donate or pick up your unsold items. <span style="text-decoration:underline;">All items must be picked up between 6:00 - 10:00 PM on Sunday, October 5th.</span> Or you may choose to donate your items. We donate them to a local charity that distributes the items without charge to their recipients. <em>Any items not picked up by 10:00 PM on Sunday, October 5th, will be donated. Unfortunately, <span style="text-decoration:underline">no exceptions</span> can be made to this rule.</em></p>
   <h3>Get your $$$</h3>
-  <p>Your proceeds will arrive via Paypal on Tuesday, March 11th. (You do have the option of receiving a check in the mail. There is a $1.00 processing fee if you choose this option.)</p>
+  <p>Your proceeds will arrive via Paypal on the Tuesday immediately following the sale. (You do have the option of receiving a check in the mail. There is a $1.00 processing fee if you choose this option.)</p>
 </section>
