--- a/source/returns.html.erb
+++ b/source/returns.html.erb
@@ -9,7 +9,7 @@ title: Return Consignors
 
   <p>So let&#8217;s get to it!</p>
 
-  <p>First, send an <a href="mailto:mattjenraz@gmail.com?subject=Dandelion+Wishes">EMAIL</a>, with your name and consignor number, and we will get you registered for the Spring Sale. (Going this route will waive the $10 registration fee.)</p>
+  <p>First, go in and <a href="http://www.mysalemanager.net/reg_start.aspx?partnercode=DAND" target="_blank">REGISTER</a> for the upcoming sale. PLEASE NOTE: Every consignor is being asked to pay the $10 registration fee this time around, with the option of getting a refund for sharing the sale on <a href="https://www.facebook.com/groups/50300419070/" target="_blank">FACEBOOK</a>. This is something new we're trying, so it's not set in stone, but we'd like to see how it goes for this sale.</p>
 
   <p>Then you can sign up to <a href="http://www.mysalemanager.net/wrk_start.aspx?partnercode=DAND" target="_blank">VOLUNTEER</a> if you&#8217;d like, select a <a href="http://www.mysalemanager.net/drp_start.aspx?partnercode=DAND" target="_blank">DROP-OFF</a> time, and start <a href='http://www.mysalemanager.net/itm_start.aspx?partnercode=DAND' target='_blank'>ENTERING AND PRINTING</a> tags!</p>
 
