--- a/source/sellers.html.erb
+++ b/source/sellers.html.erb
@@ -10,12 +10,12 @@ title: Sellers
     <li>Enter and tag your items online</li>
     <li>Bring your items to the site</li>
   </ol>
-  <p>We do the advertising, set up the location for the sale, and sell your items! You will receive 60-70% of the sale proceeds. At the conclusion of the sale, you can choose to pick up any unsold items or donate them. Then, on the Tuesday following the sale, you will receive your proceeds from the sale via Paypal. It's as simple as that!</p>
+  <p>We do the advertising, set up the location for the sale, and sell your items! You will receive 65-75% of the sale proceeds. At the conclusion of the sale, you can choose to pick up any unsold items or donate them. Then, on the Tuesday following the sale, you will receive your proceeds from the sale via Paypal. It's as simple as that!</p>
   <p>Here's a bit more detail:</p>
   <h3>Register</h3>
   <p>There is a $10 registration at the time you <a href="http://www.mysalemanager.net/reg_start.aspx?partnercode=DAND&type=new" target="_blank">register</a>.</p>
   <h3>Choose your earning percentage</h3>
-  <p>Consignors typically receive 60% of their sale proceeds. But if you&#8217;d like to earn a little more, <a href="http://www.mysalemanager.net/wrk_start.aspx?partnercode=DAND" target="_blank">VOLUNTEER</a> to work a 4-hour shift and the percentage is increased to 70%!</p>
+  <p>Consignors typically receive 65% of their sale proceeds. But if you&#8217;d like to earn a little more, <a href="http://www.mysalemanager.net/wrk_start.aspx?partnercode=DAND" target="_blank">VOLUNTEER</a> to work a 4-hour shift and the percentage is increased to 75%!</p>
   <h3>Prepare your items</h3>
   <p>Go through your kid's closets, toy boxes, and bookshelves, and gather your items to sell. We have <a href="instructions.pdf" target="_blank">INSTRUCTIONS</a> on how to tag your clothing, and how to prepare your toys. You determine the price of your items, but a pricing guideline can be found <a href="pricing_guidelines.pdf" target="_blank">HERE</a>.</p>
   <h3>Drop off your items</h3>
@@ -23,7 +23,7 @@ title: Sellers
   <h3>Bonus!!!</h3>
   <p>As a consignor, you have the privilege of shopping before the public! At your drop-off appointment, you will receive your invitation to the Friday night Pre-Sale. It will allow entrance for you and one guest.</p>
   <h3>Pick up or donate your unsold items</h3>
-  <p>You may choose to donate or pick up your unsold items. <span style="text-decoration:underline;">All items must be picked up between 6:00 - 10:00 PM on Sunday, October 5th.</span> Or you may choose to donate your items. We donate them to a local charity that distributes the items without charge to their recipients. <em>Any items not picked up by 10:00 PM on Sunday, October 5th, will be donated. Unfortunately, <span style="text-decoration:underline">no exceptions</span> can be made to this rule.</em></p>
+  <p>You may choose to donate or pick up your unsold items. <span style="text-decoration:underline;">All items must be picked up between 6:00 - 10:00pm on Sunday [the last day of the sale].</span> Or you may choose to donate your items. We donate them to a local charity that distributes the items without charge to their recipients. <em>Any items not picked up by 10:00 PM on Sunday will be donated. Unfortunately, <span style="text-decoration:underline">no exceptions</span> can be made to this rule.</em></p>
   <h3>Get your $$$</h3>
   <p>Your proceeds will arrive via Paypal on the Tuesday immediately following the sale. (You do have the option of receiving a check in the mail. There is a $1.00 processing fee if you choose this option.)</p>
 </section>
