--- a/source/shoppers.html.erb
+++ b/source/shoppers.html.erb
@@ -6,7 +6,7 @@ title: Shoppers
 <section class="shoppers-content">
   <!-- <h1>Shop at Dandelion Wishes!</h1> -->
     <div class="sale-location well">
-      <h3>Fall Sale: October 3 - 5</h3>
+      <h3>Spring Sale: March 6 - 7</h3>
       <p>Morgan Hill Community & Cultural Center</p>
       <p>17000 Monterey St</p>
       <p>Morgan Hill, CA  95037</p>
